experimentData/CFR-detailedExperimentData/errorSamples/recompilationFailures/399/log-1-399.log

Test.java:226: error: undefined label: block0
                        break block0;
                        ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

